# car-ppm-mqtt

./: CMakeLists.txt  LICENSE  README.md  mqtt-car - 副本.ino  mqtt-car.ino  partitions.csv  sdkconfig  sdkconfig - 副本  sdkconfig.old
.github/workflows/: mqtt-ppm.yml
components/cmd_system/: cmd_system.c  cmd_system.h
components/console_app/: CMakeLists.txt  cmd_decl.h  console_app.c  console_app.h
components/esp32-wifi-manager/: CMakeLists.txt
components/esp32-wifi-manager/examples/default_demo/: sdkconfig  sdkconfig.old
components/esp32-wifi-manager/examples/http_hook/: sdkconfig  sdkconfig.old
components/esp32-wifi-manager/examples/http_hook/main/: user_main.c
components/esp32-wifi-manager/src/: code.js  dns_server.c  http_app.c  http_app.h  index.html  index1.html  style.css  web.html  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c  main.c.1.c
main/led/: led.c  led.h
main/mqtt/: iothub.c  iothub.h
main/network/: airkiss.c  airkiss.h  connect.c  network.c  network.h
main/ps4/: esp_hid_gap.c  esp_hid_gap.h  ps4.c  ps4.h
main/rc/: rc.c  rc.h
main/time/: time-1.c  time-1.h
main/utility/: utility.c  utility.h
主要的/: config.h
